--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -13,5 +13,6 @@
     <a href="{{ url_for('login') }}">Login</a><br>
     <a href="{{ url_for('logout') }}">Logout</a><br>
     <a href="{{ url_for('deposit') }}">Deposit</a><br>
+    <a href="{{ url_for('play') }}">Play</a><br>
 
 {% endblock %}
