--- a/flaskr/templates/lot/deposit.html
+++ b/flaskr/templates/lot/deposit.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h1><b> Deposit Page</b></h1>
 
-    <form action="{{ url_for('deposit') }}", method="POST">
+    <form action="{{ url_for('deposit') }}" method="POST">
         <input type="number" name="deposit" placeholder="Deposit" required="required"><br>
         <input type="submit" value="Confirm">
 
