--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Index{% endblock %}
 
 {% block content %}
-    <h1><b> Index Page</b></h1>
+    <h1><b>Slot Machine</b></h1>
     {% if current_user.is_authenticated %}
         <h3>Hello {{ current_user.username }}, your deposit is {{ current_user.deposit }}</h3>
     {% else %}
