--- a/flaskr/templates/lot/deposit.html
+++ b/flaskr/templates/lot/deposit.html
@@ -5,7 +5,7 @@
     <h1><b> Deposit Page</b></h1>
 
     <form action="{{ url_for('deposit') }}" method="POST">
-        <input type="number" name="deposit" placeholder="Deposit" required="required"><br>
+        <input type="number" name="deposit" placeholder="Deposit" required="required" min="1"><br>
         <input type="submit" value="Confirm">
 
     </form>
