--- a/flaskr/templates/lot/deposit.html
+++ b/flaskr/templates/lot/deposit.html
@@ -3,6 +3,7 @@
 
 {% block content %}
     <h1><b> Deposit Page</b></h1>
+    {{ message }}
 
     <form action="{{ url_for('deposit') }}" method="POST">
         <input type="number" name="deposit" placeholder="Deposit" required="required" min="1"><br>
