Add text, bg, footers, inputs css.
Add user existing check.

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -16,6 +16,6 @@
             </ul>
         {% endif %}
     {% endwith %}
-    {% block content %}{% endblock %}
+    <div id="bg_last"><div id="bg_third"><div id="bg_second"><div id="bg_first">{% block content %} {% endblock %}</div></div></div></div>
 </body>
 </html>
