--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,13 +1,262 @@
-h1 {
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    /*font-family: "Courier New", Courier, monospace;*/
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000;
+}
+
+.footer{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 60px;
+    max-height: fit-content;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.25);
+    background-color: #2c0000;
+    color: #f4e5e5;
+}
+p {
+    font-family: 'Poppins', sans-serif;
+    margin: 0 0 10px 0;
+    font-weight: bold;
+    color: #f4e5e5
+}
+.footer h1{
+    color: #f4e5e5;
+    font-weight: bold;
+}
+.footer h3 {
+    font-size: smaller;
+    margin: 0 30px 3px;
+    color: #f4e5e5;
+}
+
+footer a{
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 20;
+    color: #f4e5e5;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.menu{
+    width: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+h1, h3 {
+
     font-family: "Arial Black", Gadget, sans-serif;
     font-size: 20px;
     letter-spacing: 1px;
     word-spacing: 2px;
-    color: #000000;
+    color: #f4e5e5;
     font-weight: 700;
     text-decoration: none;
     font-style: normal;
     font-variant: normal;
     text-transform: none;
+    margin: 3px;
 
+}
+
+
+.slot-machine {
+    display: flex;
+    width: 110px;
+    height: 140px;
+    align-self: center;
+    justify-content: start;
+    font-size: 30px;
+    margin-bottom: 3px;
+}
+/*.slot-machine table {*/
+
+/*    border-bottom: 1px solid #ccc;*/
+/*}*/
+
+.base {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 400px;
+    height: fit-content;
+    unicode-bidi: normal;
+    box-sizing: border-box;
+    align-items: center;
+    margin-top: 50px;
+    box-shadow:
+            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    position: relative;
+    border-radius: 10px;
+    padding: 5px 0;
+    background-color: #5c0000;
+}
+
+#bg_first {
+    width: 560px;
+    height: 560px;
+    box-shadow:
+            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 10px;
+    background-color: #4c0000;
+
+}
+
+#bg_second {
+    width: 700px;
+    height: 640px;
+    box-shadow:
+            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #3d0000;
+
+}
+
+#bg_third {
+    width: 840px;
+    height: 700px;
+    box-shadow:
+            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #2d0000;
+
+}
+#bg_last {
+    width: 980px;
+    height: 760px;
+    box-shadow:
+            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #1d0000;
+
+}
+
+.buttons input{
+    margin-bottom: 3px;
+
+}
+
+.buttons {
+    margin-top: 60px;
+}
+
+input {
+    width: 136px;
+    max-width: 400px;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: 2px solid darkred;
+    border-radius: 5px;
+    outline: none;
+    transition: border-color 0.3s ease;
+    background-color: #eeebdc;
+}
+
+/*input [type="number"] {*/
+/*    width: 170px;*/
+/*}*/
+
+.start_text h3 {
+    /*margin: 10px 0 90px 0;*/
+    font-size: 15px;
+    font-weight: normal;
+    width: 200px;
+    text-align: center;
+}
+
+.lot{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 180px;
+    margin-top: 70px;
+}
+
+.lot form {
+    width: 115px;
+    height: 170px;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+
+ #values{
+     margin: 3px;
+ }
+ #info{
+     align-self: center;
+
+ }
+.values {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    /*margin-right: 50px;*/
+    background-color: #2c0000;
+    /*border-radius: 10px;*/
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0 1px 5px 0 #2c0000;
+    font-size: 10px;
+    font-family: "Arial Black", Gadget, sans-serif;
+    position: absolute;
+    top: 0;
+    color: #f4e5e5;
+
+}
+
+input[type="submit"] {
+    background-color: #2c0000;
+    border: none;
+    color: #f4e5e5;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 8px;
+    width: 170px;
 }
