--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -2,11 +2,15 @@
 {% block title %}Index{% endblock %}
 
 {% block content %}
-    <h1><b>Login Page</b></h1>
-
-    <form action="{{ url_for('login') }}", method="POST">
-        <input type="text" name="username" placeholder="Username" required="required"><br>
-        <input type="password" name="password" placeholder="Password" required="required"><br>
-        <input type="submit" value="Login">
-    </form>
+    <footer class="footer">
+        <h1><b>Slot Machine</b></h1>
+        <h3><b>Login Page</b></h3>
+    </footer>
+    <div class="base">
+        <form action="{{ url_for('login') }}", method="POST">
+            <input type="text" name="username" placeholder="Username" required="required"><br>
+            <input type="password" name="password" placeholder="Password" required="required"><br>
+            <input type="submit" value="Login">
+        </form>
+    </div>
 {% endblock %}
