--- a/flaskr/templates/auth/signup.html
+++ b/flaskr/templates/auth/signup.html
@@ -2,12 +2,16 @@
 {% block title %}Index{% endblock %}
 
 {% block content %}
-    <h1><b> Sign Up Page</b></h1>
+    <footer class="footer">
+        <h1><b>Slot Machine</b></h1>
+        <h3><b>Sign Up Page</b></h3>
+    </footer>
 
-    <form action="{{ url_for('signup') }}", method="POST">
-        <input type="text" name="username" placeholder="Username" required="required"><br>
-        <input type="password" name="password" placeholder="Password" required="required"><br>
-        <input type="submit" value="Sign Up">
-
-    </form>
+     <div class="base">
+        <form action="{{ url_for('signup') }}", method="POST">
+            <input type="text" name="username" placeholder="Username" required="required"><br>
+            <input type="password" name="password" placeholder="Password" required="required"><br>
+            <input type="submit" value="Sign Up">
+        </form>
+     </div>
 {% endblock %}
