--- a/flaskr/templates/lot/deposit.html
+++ b/flaskr/templates/lot/deposit.html
@@ -2,12 +2,16 @@
 {% block title %}Index{% endblock %}
 
 {% block content %}
-    <h1><b> Deposit Page</b></h1>
-    {{ message }}
+    <footer class="footer">
+        <h1><b>Slot Machine</b></h1>
+        <h3>Deposit Page</h3>
+    </footer>
+    <div class="base">
+        <p style="width: 200px; margin-bottom: 5px; ">{{ message }}</p>
 
-    <form action="{{ url_for('deposit') }}" method="POST">
-        <input type="number" name="deposit" placeholder="Deposit" required="required" min="1"><br>
-        <input type="submit" value="Confirm">
-
-    </form>
+        <form action="{{ url_for('deposit') }}" method="POST">
+            <input type="number" name="deposit" placeholder="Deposit" required="required" min="1"><br>
+            <input type="submit" value="Confirm">
+        </form>
+    </div>
 {% endblock %}
