--- a/flaskr/templates/lot/session.html
+++ b/flaskr/templates/lot/session.html
@@ -2,11 +2,16 @@
 {% block title %}Index{% endblock %}
 
 {% block content %}
-    <h2 style="color: darkred"><b>Please, write how much you want to bet on how much lines</b></h2>
+    <footer class="footer">
+        <h1><b>Slot Machine</b></h1>
+        <h3>Please, write how much you want to bet and on how many lines.</h3>
+    </footer>
 
-    <form action="{{ url_for('play') }}" method="POST">
-        <input type="number" name="bet" placeholder="Bet" required="required"  min="1" style="width: 100px"><br>
-        <input type="number" name="line" placeholder="Line" required="required" max="3" min="1" style="width: 100px"><br>
+    <div class="base">
+        <form action="{{ url_for('play') }}" method="POST">
+        <input type="number" name="bet" placeholder="Bet" required="required"  min="1" ><br>
+        <input type="number" name="line" placeholder="Line" required="required" max="3" min="1"><br>
         <input type="submit" value="Play">
     </form>
+    </div>
 {% endblock %}
