--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -79,19 +79,6 @@ h1, h3 {
 }
 
 
-.slot-machine {
-    display: flex;
-    width: 110px;
-    height: 140px;
-    align-self: center;
-    justify-content: start;
-    font-size: 30px;
-    margin-bottom: 3px;
-}
-/*.slot-machine table {*/
-
-/*    border-bottom: 1px solid #ccc;*/
-/*}*/
 
 .base {
     display: flex;
@@ -175,7 +162,7 @@ h1, h3 {
 }
 
 .buttons {
-    margin-top: 60px;
+    margin-top: 10px;
 }
 
 input {
@@ -183,7 +170,7 @@ input {
     max-width: 400px;
     padding: 10px 15px;
     font-size: 16px;
-    border: 2px solid darkred;
+    /*border: 2px solid darkred;*/
     border-radius: 5px;
     outline: none;
     transition: border-color 0.3s ease;
@@ -202,18 +189,36 @@ input {
     text-align: center;
 }
 
+.slot-machine {
+    display: flex;
+    width: 171px;
+    height: 171px;
+    align-self: center;
+    justify-content: center;
+    font-size: 40px;
+    margin-bottom: 5px;
+    background-color: #f4e5e5;
+    box-shadow: 0 0 1.5em rgb(0 200 0 / 60%);
+    border-radius: 10px;
+    border: 4px solid green;
+
+}
+
 .lot{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 250px;
-    height: 180px;
+    height: 250px;
     margin-top: 70px;
+    /*margin-bottom: 10px;*/
 }
 
 .lot form {
     width: 115px;
-    height: 170px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
     position: relative;
     align-items: center;
     justify-content: center;
@@ -221,14 +226,17 @@ input {
 
  #values{
      margin: 3px;
+     font-size: 14px;
+
  }
  #info{
      align-self: center;
+     font-size: 12px;
 
  }
 .values {
     width: 100%;
-    height: 40px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -249,8 +257,6 @@ input {
 }
 
 input[type="submit"] {
-    background-color: #2c0000;
-    border: none;
     color: #f4e5e5;
     padding: 5px 10px;
     text-align: center;
@@ -259,4 +265,6 @@ input[type="submit"] {
     font-size: 16px;
     border-radius: 8px;
     width: 170px;
+    border: 2px solid #f4e5e5;
+    background: none;
 }
