--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -4,7 +4,6 @@ body {
     margin: 0;
     border: 0;
     padding: 0;
-    /*font-family: "Courier New", Courier, monospace;*/
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -29,12 +28,7 @@ body {
     background-color: #2c0000;
     color: #f4e5e5;
 }
-p {
-    font-family: 'Poppins', sans-serif;
-    margin: 0 0 10px 0;
-    font-weight: bold;
-    color: #f4e5e5
-}
+
 .footer h1{
     color: #f4e5e5;
     font-weight: bold;
@@ -75,9 +69,14 @@ h1, h3 {
     font-variant: normal;
     text-transform: none;
     margin: 3px;
-
 }
 
+p {
+    font-family: 'Poppins', sans-serif;
+    margin: 0 0 10px 0;
+    font-weight: bold;
+    color: #f4e5e5
+}
 
 
 .base {
@@ -91,8 +90,7 @@ h1, h3 {
     box-sizing: border-box;
     align-items: center;
     margin-top: 50px;
-    box-shadow:
-            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    box-shadow: 0.3em 0.3em 1em rgb(200 0 0 / 60%);
     position: relative;
     border-radius: 10px;
     padding: 5px 0;
@@ -102,8 +100,7 @@ h1, h3 {
 #bg_first {
     width: 560px;
     height: 560px;
-    box-shadow:
-            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    box-shadow: 0.3em 0.3em 1em rgb(200 0 0 / 60%);
     align-self: center;
     display: flex;
     flex-direction: column;
@@ -118,8 +115,7 @@ h1, h3 {
 #bg_second {
     width: 700px;
     height: 640px;
-    box-shadow:
-            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    box-shadow: 0.3em 0.3em 1em rgb(200 0 0 / 60%);
     align-self: center;
     display: flex;
     justify-content: center;
@@ -132,8 +128,7 @@ h1, h3 {
 #bg_third {
     width: 840px;
     height: 700px;
-    box-shadow:
-            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    box-shadow: 0.3em 0.3em 1em rgb(200 0 0 / 60%);
     align-self: center;
     display: flex;
     justify-content: center;
@@ -145,8 +140,7 @@ h1, h3 {
 #bg_last {
     width: 980px;
     height: 760px;
-    box-shadow:
-            0.3em 0.3em 1em rgb(200 0 0 / 60%);
+    box-shadow: 0.3em 0.3em 1em rgb(200 0 0 / 60%);
     align-self: center;
     display: flex;
     justify-content: center;
@@ -156,9 +150,15 @@ h1, h3 {
 
 }
 
+.start_text h3 {
+    font-size: 15px;
+    font-weight: normal;
+    width: 200px;
+    text-align: center;
+}
+
 .buttons input{
     margin-bottom: 3px;
-
 }
 
 .buttons {
@@ -170,24 +170,13 @@ input {
     max-width: 400px;
     padding: 10px 15px;
     font-size: 16px;
-    /*border: 2px solid darkred;*/
     border-radius: 5px;
     outline: none;
     transition: border-color 0.3s ease;
     background-color: #eeebdc;
 }
 
-/*input [type="number"] {*/
-/*    width: 170px;*/
-/*}*/
 
-.start_text h3 {
-    /*margin: 10px 0 90px 0;*/
-    font-size: 15px;
-    font-weight: normal;
-    width: 200px;
-    text-align: center;
-}
 
 .slot-machine {
     display: flex;
@@ -211,7 +200,6 @@ input {
     width: 250px;
     height: 250px;
     margin-top: 70px;
-    /*margin-bottom: 10px;*/
 }
 
 .lot form {
@@ -224,16 +212,6 @@ input {
     justify-content: center;
 }
 
- #values{
-     margin: 3px;
-     font-size: 14px;
-
- }
- #info{
-     align-self: center;
-     font-size: 12px;
-
- }
 .values {
     width: 100%;
     height: fit-content;
@@ -242,9 +220,7 @@ input {
     justify-content: center;
     align-items: center;
     align-self: center;
-    /*margin-right: 50px;*/
     background-color: #2c0000;
-    /*border-radius: 10px;*/
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     box-shadow: 0 1px 5px 0 #2c0000;
@@ -253,8 +229,17 @@ input {
     position: absolute;
     top: 0;
     color: #f4e5e5;
-
 }
+
+ #values{
+     margin: 3px;
+     font-size: 14px;
+ }
+
+ #info{
+     align-self: center;
+     font-size: 12px;
+ }
 
 input[type="submit"] {
     color: #f4e5e5;
