rollback to old structure in root folder
added Blueprint to routes.py, moved constants to config.py, changed all url_for to start with page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
     <footer class="footer">
         <h1 id="index"><b>Slot Machine</b></h1>
         <div class="menu">
-            <a href="{{ url_for('play') }}">Play</a>
-            <a href="{{ url_for('deposit') }}">Deposit</a>
-            <a href="{{ url_for('login') }}">Login</a>
-            <a href="{{ url_for('signup') }}">Sign Up</a>
-            <a href="{{ url_for('logout') }}">Logout</a>
+            <a href="{{ url_for('page.play') }}">Play</a>
+            <a href="{{ url_for('page.deposit') }}">Deposit</a>
+            <a href="{{ url_for('page.login') }}">Login</a>
+            <a href="{{ url_for('page.signup') }}">Sign Up</a>
+            <a href="{{ url_for('page.logout') }}">Logout</a>
         </div>
     </footer>
    <div class="base" style="margin: 0">
