--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -7,7 +7,7 @@
         <h3><b>Login Page</b></h3>
     </footer>
     <div class="base">
-        <form action="{{ url_for('login') }}", method="POST">
+        <form action="{{ url_for('page.login') }}", method="POST">
             <input type="text" name="username" placeholder="Username" required="required"><br>
             <input type="password" name="password" placeholder="Password" required="required"><br>
             <input type="submit" value="Login">
