--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -8,7 +8,7 @@
     </footer>
 
      <div class="base">
-        <form action="{{ url_for('signup') }}", method="POST">
+        <form action="{{ url_for('page.signup') }}", method="POST">
             <input type="text" name="username" placeholder="Username" required="required"><br>
             <input type="password" name="password" placeholder="Password" required="required"><br>
             <input type="submit" value="Sign Up">
