--- a/templates/lot/deposit.html
+++ b/templates/lot/deposit.html
@@ -9,7 +9,7 @@
     <div class="base">
         <p style="width: 200px; margin-bottom: 5px; ">{{ message }}</p>
 
-        <form action="{{ url_for('deposit') }}" method="POST">
+        <form action="{{ url_for('page.deposit') }}" method="POST">
             <input type="number" name="deposit" placeholder="Deposit" required="required" min="1"><br>
             <input type="submit" value="Confirm">
         </form>
