--- a/templates/lot/session.html
+++ b/templates/lot/session.html
@@ -8,7 +8,7 @@
     </footer>
 
     <div class="base">
-        <form action="{{ url_for('play') }}" method="POST">
+        <form action="{{ url_for('page.play') }}" method="POST">
         <input type="number" name="bet" placeholder="Bet" required="required"  min="1" ><br>
         <input type="number" name="line" placeholder="Line" required="required" max="3" min="1"><br>
         <input type="submit" value="Play">
